--- a/src/JavaCalculator.form
+++ b/src/JavaCalculator.form
@@ -3,9 +3,11 @@
   <grid id="27dc6" binding="JavaCalculator" layout-manager="GridLayoutManager" row-count="5" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="20" bottom="0" right="20"/>
     <constraints>
-      <xy x="20" y="20" width="474" height="498"/>
+      <xy x="20" y="20" width="702" height="663"/>
     </constraints>
     <properties>
+      <background color="-16777216"/>
+      <enabled value="false"/>
       <foreground color="-16776610"/>
     </properties>
     <border type="none"/>
@@ -15,6 +17,7 @@
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <enabled value="true"/>
           <text value="1"/>
         </properties>
       </component>
@@ -169,7 +172,9 @@
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-851984"/>
+        </properties>
       </component>
     </children>
   </grid>
